# rtype

./: Protocol.txt  build.sh  build_all_linux.sh  build_mac.sh  build_mac_speed.sh  conanfile.py  conanfile.txt
_build/: CMakeCache.txt  FindBZip2.cmake  FindSFML.cmake  Findasio.cmake  Findflac.cmake  Makefile  cmake_install.cmake  conanbuildinfo.cmake  conaninfo.txt
_buildClient/: CMakeCache.txt  FindALSA.cmake  FindOgg.cmake  FindOpenAL.cmake  FindPNG.cmake  FindVorbis.cmake  Findxorg.cmake  Makefile  cmake_install.cmake  conan_paths.cmake
_buildServer/: CMakeCache.txt  FindBrotli.cmake  FindFreetype.cmake  FindZLIB.cmake  Findlibudev.cmake  Findopengl_system.cmake  Findstb.cmake  Makefile  cmake_install.cmake  conanbuildinfo.txt
client/: CMakeLists.txt
client/include/: EntityData.hpp  GameNetwork.hpp  Network.hpp  init.hpp  initPhase.hpp
client/src/: EntityData.cpp  GameNetwork.cpp  Network.cpp  init.cpp  initPhase.cpp  main.cpp
common/include/: EntityObject.hpp  MergeData.hpp  Phase.hpp  Random.hpp  Waves.hpp  sfmlFunc.hpp
common/include/components/: Bar.hpp  BulletComp.hpp  Clickable.hpp  Input.hpp  Motion.hpp  ParallaxeComp.hpp  Settings.hpp  Ship.hpp  Sprite.hpp  Text.hpp  Weapon.hpp
common/include/ecs/: ComponentArray.hpp  ComponentManager.hpp  Coordinator.hpp  EntityManager.hpp  IComponentArray.hpp  System.hpp  SystemManager.hpp
common/include/systems/: Collide.hpp  CreateEnemy.hpp  DestroyOutOfScreen.hpp  EnemyMotion.hpp  GestButton.hpp  KillEnemy.hpp  Mouvement.hpp  MovingBar.hpp  Parallaxe.hpp  PlayerMotion.hpp  PrintText.hpp  Render.hpp  Settingsys.hpp  TextBox.hpp  Weapons.hpp
common/src/: MergeData.cpp  sfmlFunc.cpp
common/src/systems/: Collide.cpp  CreateEnemy.cpp  DestroyOutOfScreen.cpp  EnemyMotion.cpp  GestButton.cpp  KillEnemy.cpp  Mouvement.cpp  MovingBar.cpp  Parallaxe.cpp  PlayerMotion.cpp  PrintText.cpp  Render.cpp  Settingsys.cpp  TextBox.cpp  Weapons.cpp
protocol/: ServerProtocol.hpp
server/: CMakeLists.txt
server/include/: ClientConnection.hpp  Server.hpp  ServerManager.hpp  init.hpp
server/src/: ClientConnection.cpp  Server.cpp  ServerManager.cpp  init.cpp  main.cpp
